@@ -1,3 +1,7 @@
+2010-12-23 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* Darstellung der Bibliotheken in der Infobox inkl. Anker
+	* Platzhalter fuer Maps
+
 2010-12-21 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Oeffnungszeiten Check
 	* Darstellung geoeffnet oder geschlossen
